--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -6,7 +6,7 @@ body {
 }
 
 .crypto-containerr {
-  padding: 20px 60px;
+  padding: 15px 45px;
 }
 
 
@@ -14,27 +14,27 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .logoo {
-  font-size: 60px;
+  font-size: 45px;
   font-weight: bold;
   color: white;
-  margin-left: 100px;
+  margin-left: 75px;
 }
 
 .btn-primaryy {
   background: white;
   color: black;
-  padding: 10px 18px;
+  padding: 7.5px 12.5px;
   border: none;
-  border-radius: 30px;
+  border-radius: 24px;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 375;
   transition:  0.3s ease;
-  margin-right: 200px;
-  font-size: 20px;
+  margin-right: 150px;
+  font-size: 15px;
 }
 
 .btn-primaryy:hover {
@@ -47,46 +47,46 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  margin-top: 100px;
-  gap: 40px;
+  margin-top: 60px;
+  gap: 30px;
 }
 
 .heroo-textt h2 {
-  font-size: 60px;
+  font-size: 45px;
   font-weight: bold;
   line-height: 1.2;
-  margin-left: 100px;
+  margin-left: 75px;
 }
 
 .heroo-textt p {
-  margin-top: 16px;
+  margin-top: 12px;
   color: ghostwhite;
-  margin-left: 100px;
-  font-size: 20px;
+  margin-left: 75px;
+  font-size: 15px;
 }
 
-.heroo-textt .first{
+.heroo-textt .firstt{
   color: red;
 }
 
 .heroo-imagee img {
-  width: 400px;
-  height: 350px;
+  width: 300px;
+  height: 260px;
 }
 
 .btn-secondaryy{
   background: red;
   color: white;
-  padding: 10px 18px;
+  padding: 7.5px 12.5px;
   border: none;
-  border-radius: 30px;
+  border-radius: 24px;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 375;
   transition:  0.3s ease;
-  margin-right: 200px;
-  font-size: 20px;
-  margin-left: 100px;
-  margin-top: 40px;
+  margin-right: 150px;
+  font-size: 15px;
+  margin-left: 75px;
+  margin-top: 30px;
 }
 
 .btn-secondaryy:hover{
@@ -98,45 +98,46 @@ body {
 .features {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
-  margin-top: 90px;
+  gap: 19px;
+  margin-top: 55px;
 }
 
 .feature-card {
   background: #1f1f1f;
-  padding: 20px;
-  border-radius: 12px;
-  width: 320px;
-  height: 170px;
-  margin-left: 100px;
+  padding: 15px;
+  border-radius: 9px;
+  width: 240px;
+  height: 122px;
+  margin-left: 73px;
 }
 
 .feature-title {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 6px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .feature-title.blue {
   color: #3b82f6;
-  font-size: x-large;
+  font-size: large;
 }
 
 .feature-title.purple {
   color: #a855f7;
-  font-size: x-large;
+  font-size: large;
 }
 
 .feature-title.pink {
   color: #ec4899;
-  font-size: x-large;
+  font-size: large;
 }
 
 .feature-card p {
   color: white;
-  font-size: 20px;
+  font-size: 14px;
+  margin-top: 10px;
 }
 
 
